// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the create mutation Check that you can create a new instance of one entity 1`] = `
Array [
  "listBefore",
  "createBefore",
  "createAfter",
  "listBefore",
  "listBefore",
]
`;

exports[`Test the create mutation Check that you can create a new instance of one entity: Created user 1`] = `
Object {
  "__typename": "user",
  "id": 12501,
  "name": "new user",
}
`;

exports[`Test the create mutation Check that you can create a new instance of one entity: The new user 1`] = `
Array [
  Object {
    "company": Object {
      "id": 1,
      "name": "Company 1",
    },
    "id": 12501,
    "name": "new user",
  },
]
`;

exports[`Test the create mutation Check that you can create a new instance of one entity: User 12501 does not exists yet. 1`] = `Array []`;
